[package]
name = "svm-merkle-tree"
version = "0.1.1"
description = "A rust/wasm/svm-compatible merkle tree"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "svm_merkle_tree"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["standard"]
standard = ["sha2", "sha3"]
wasm = ["wasm-bindgen", "sha2", "sha3"]
solana = ["solana-sha256-hasher", "solana-keccak-hasher"]

[profile.release]
lto = true

[dependencies]
solana-sha256-hasher = { version = "2.3.0", optional = true }
solana-keccak-hasher = { version = "2.2.1", optional = true }
rayon = { version = "1.10.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
sha3 = { version = "0.10.8", optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
hex-literal = "0.4.1"
hex = "0.4.3"
thiserror = { version = "2.0.16", default-features = false }
anyhow = "1.0.83"
solana-nostd-sha256 = "0.1.3"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "solana")))'.dependencies]
rayon = { version = "1.10.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
solana-sha256-hasher = { version = "2.3.0" }
solana-keccak-hasher = { version = "2.2.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
sha2 = "0.10.8"
sha3 = "0.10.8"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
