[package]
name = "svm-merkle-tree"
version = "0.1.1"
description = "A rust/wasm/svm-compatible merkle tree"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "svm_merkle_tree"

[features]
sha2 = ["dep:solana-nostd-sha256"]
keccak = ["dep:solana-nostd-keccak"]
default = ["sha2", "keccak"]

[profile.release]
lto = true

[dependencies]
solana-nostd-sha256 = { version = "0.1.3", optional = true }
solana-nostd-keccak = { version = "0.1.3", optional = true }

[dev-dependencies]
hex-literal = "0.4.1"
hex = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
